--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "protonemedia/laravel-splade-breeze": "^2.2",
-        "spatie/laravel-permission": "^5.9"
+        "spatie/laravel-permission": "^5.9",
+        "spatie/laravel-query-builder": "^5.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
