--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - 8080:80
     volumes:
       - ./src:/var/www/html
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:pro
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     volumes_from:
       - php
     depends_on:
