--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     ports:
       - 8080:80
     volumes:
-      - ./src:/var/www/html
+      - ./src:/var/www/polbannews.site
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
     volumes_from:
       - php
@@ -46,7 +46,7 @@ services:
       dockerfile: Dockerfile
     container_name: php
     volumes:
-      - ./src:/var/www/html
+      - ./src:/var/www/polbannews.site
     ports:
       - "9000:9000"
     networks:
@@ -56,7 +56,7 @@ services:
     image: node:latest
     container_name: nodejs
     volumes:
-      - ./src:/var/www/html
+      - ./src:/var/www/polbannews.site
     ports:
       - "3000:3000"
     networks:
