--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,10 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "keywords": [
+        "framework",
+        "laravel"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
@@ -18,6 +21,9 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
+        "blade-ui-kit/blade-heroicons": "^2.1",
+        "blade-ui-kit/blade-icons": "^1.5",
+        "codeat3/blade-eos-icons": "^1.13",
         "fakerphp/faker": "^1.9.1",
         "laravel/dusk": "^7.4",
         "laravel/pint": "^1.0",
