--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "protonemedia/laravel-splade-breeze": "^2.2",
+        "spatie/laravel-activitylog": "^4.7",
         "spatie/laravel-permission": "^5.9",
         "spatie/laravel-query-builder": "^5.1"
     },
